force-app/main/default/objects/Tour_Package__c/Tour_Package__c.object-meta.xml
<CustomObject>
    <label>Tour Package</label>
    <nameField>
        <label>Tour Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tour Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>