force-app/main/default/objects/Tour_Package__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adventure</fullName>
            </value>
            <value>
                <fullName>Leisure</fullName>
            </value>
            <value>
                <fullName>Cultural</fullName>
            </value>
            <value>
                <fullName>Wildlife</fullName>
            </value>
            <value>
                <fullName>Cruise</fullName>
            </value>
            <value>
                <fullName>Mountains</fullName>
            </value>
            <value>
                <fullName>Beach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>