force-app/main/default/objects/Tour_Package__c/fields/Total_Responses__c.field-meta.xml
<CustomField>
    <fullName>Total_Responses__c</fullName>
    <label>Total Responses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>