force-app/main/default/objects/Tour_Package__c/fields/Travel_Mode__c.field-meta.xml
<CustomField>
    <fullName>Travel_Mode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Travel Mode</label>
    <referenceTo>TravelMode</referenceTo>
    <relationshipLabel>Tour Packages</relationshipLabel>
    <relationshipName>Tour_Packages</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>