force-app/main/default/objects/Tour_Package__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Destination__c</columns>
    <columns>Total_Responses__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>